# rexi

./: .gitignore  README.md  install.sh  pyproject.toml  run.sh  run_tests.sh
rexi/: main.py  parser.py  rexi.tcss
rexi/data_providers/: awk_executor.py  jq_executor.py  profile_manager.py  regex_provider.py
rexi/default_configs/: profiles.json
rexi/presentation/: formatter.py
rexi/ui/views/: regex_view.py
rexi/ui/widgets/: features_modal.py  features_widget.py  help_modal.py
rexi/utils/: regex_help.py
tests/: test_cli.py  test_copy_button.py  test_jq_executor.py  test_logic.py  test_profiles.py  test_ui.py  test_ui_hide_panel.py  test_ui_interactions.py
