[project]
name = "rexi"
version = "1.2.1"
description = "Simple and Interactive regex shell"
authors = [{name = "Roy Reznik", email = "royreznik@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "textual>=5.3.0",
    "typer>=0.20.0",
    "regex>=2025.11.3",
    "pyperclip>=1.8.2"
]

[project.scripts]
rexi = "rexi.main:app"

[project.urls]
Homepage = "https://github.com/royreznik/rexi"
Repository = "https://github.com/royreznik/rexi"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
